# demo-linux-web-server

./: CMakeLists.txt  LICENSE  README.rst
cmake/: FindLibMagic.cmake
debian/: README  changelog  control  copyright  demo-web-server.manpages  demo-web-server.service  manpage.1  postinst  postrm  preinst  prerm
src/: CMakeLists.txt  addrinfo.cpp  addrinfo.hpp  demo_web_server.cpp  file.cpp  file.hpp  http.cpp  http.hpp  logging.hpp  mime.cpp  mime.hpp  signal.cpp  signal.hpp  socket.cpp  socket.hpp  thread.hpp  utils.cpp  utils.hpp  version.hpp.in  web_server.cpp  web_server.hpp
